--- a/task05/css/style_1.css
+++ b/task05/css/style_1.css
@@ -2,17 +2,28 @@
 	margin: 0;
 	padding: 0;
 }
+html, body, div, h1, h2, h3, h4, h5, h6, p, dl, dt, dd, ol, ul, li, fieldset, form, label, input, legend, table, caption, tbody, tfoot, thead, tr, th, td, textarea, article, aside, audio, canvas, figure, footer, header, mark, menu, nav, section, time, video { margin: 0; padding: 0; }
+html {
+	height: 100%;
+}
+body {
+	width: 100%;
+	height: 100%;
+	min-width: 1280px;
+	min-height: 600px;
+	padding-left: 10px;
+}
 header {
-	font-size: 40px;
+	font-size: 32px;
 	font-weight: 700;
 }
 section {
 	margin: 20px 0;
 }
 section p {
-	font-size: 28px;
+	font-size: 24px;
 	font-weight: 700;
-	line-height: 20px;
+	padding-bottom: 10px;
 }
 .info span {
 	padding: 0 40px 0 16px;
@@ -24,7 +35,9 @@ address span,
 address a {
 	padding: 0 40px 0 16px;
 }
+dl dt {
+	font-weight: 700;
+}
 dl dd {
-	margin-left: 0;
 	margin-bottom: 20px;
 }
