--- a/task07/css/index.css
+++ b/task07/css/index.css
@@ -220,10 +220,258 @@ button.product_info_btn_check {
 }
 .learn {
 	border-top: 1px solid #f2f2f2;
+	border-bottom: 1px solid #f2f2f2;
 }
 .learn .wrap {
 	padding: 80px 0;
 }
-
-
-
+.learn_item {
+	display: flex;
+	margin: 50px 0;
+}
+.learn_item_img {
+	flex: none;
+	width: 570px;
+	height: 350px;
+	background: url(../img/bg_learn_improve.jpg) no-repeat center center;
+}
+.learn_item_info {
+	flex: 1;
+	display: flex;
+	padding: 0 100px;
+	justify-content: center;
+	align-content: center;
+	flex-wrap: wrap;
+}
+.learn_item_info h2 {
+  flex: 1 0;
+  word-wrap: break-word;
+  font-size: 20px;
+  color: rgb(20, 20, 20);
+  line-height: 1.6;
+  text-align: left;
+}
+.learn_item:nth-child(2) .learn_item_img {
+	order: 2;
+	background-image: url(../img/bg_learn_bird.jpg);
+}
+.learn_item_info p {
+  font-size: 16px;
+  color: rgba(20, 20, 20,.7);
+  line-height: 1.75;
+  text-align: left;
+}
+/*
+------------------------------------------- */
+.crew {
+	border: 1px solid #f2f2f2;
+}
+.crew .wrap {
+	padding: 80px 0;
+	text-align: center;
+}
+.crew_info>h2 {
+  font-size: 42px;
+  color: rgb(20, 20, 20);
+  line-height: 1.2;
+}
+.crew_info>p {
+  font-size: 18px;
+  color: rgba(20, 20, 20,.7);
+  line-height: 1.5;
+}
+.crew ul {
+	margin-top: 63px;
+}
+.crew li {
+	position: relative;
+	float: left;
+	width: 470px;
+	height: 340px;
+	margin: 0 30px 30px 0;
+	cursor: url(../img/Hand-Icon.png),auto;
+}
+.crew li:hover .hover {
+	display: block;
+}
+.crew .hover {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 470px;
+	height: 340px;
+	background-color: rgba(20,20,20,.65);
+}
+.crew .hover_wrap {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
+}
+.crew .hover_icon {
+	margin-top: 30px;
+}
+.crew i {
+	display: inline-block;
+	width: 51px;
+	height: 54px;
+	margin-right:30px;
+	background: url(../img/icon_crew_facebook.png);
+}
+.crew .twitter {
+	background: url(../img/icon_crew_twitter.png);
+}
+.crew .instagram {
+	margin-right: 0;
+	background: url(../img/icon_crew_instagram.png);
+}
+.hover_wrap h2 {
+  font-size: 20px;
+  color: rgb(255, 255, 255);
+  line-height: 1.6;
+}
+.hover_wrap p {
+  font-size: 12px;
+  color: rgba(255, 255, 255,.4);
+  text-transform: uppercase;
+  line-height: 2.3;
+}
+/*
+---------------------------*/
+.contact .wrap {
+	padding: 70px 0;
+}
+.contact_form {
+	float: left;
+	width: 468px;
+	padding: 50px 0 66px 0;
+	border-radius: 10px;
+	text-align: center;
+	border: 1px solid #f2f2f2;
+}
+.contact_form h2 {
+	font-size: 16px;
+	color: rgb(20, 20, 20);
+    text-transform: uppercase;
+    line-height: 2;
+    margin-bottom: 40px;
+}
+.contact_form input {
+	width: 328px;
+	font-size: 14px;
+  	height: 8px;
+  	padding: 20px;
+	margin-bottom: 30px;
+  	border: 1px solid #d4d3d3;
+  	border-radius: 2px;
+  	color: rgba(20,20,20,.5);
+}
+.contact_form textarea {
+  height: 100px;
+  word-wrap: wrap;
+  width: 328px;
+	font-size: 14px;
+  	padding: 20px;
+	margin-bottom: 30px;
+  	border: 1px solid #d4d3d3;
+  	border-radius: 2px;
+  	color: rgba(20,20,20,.5);
+}
+.contact_form button{
+	width: 370px;
+	border-radius: 2px;
+	height: 50px;
+	background-color: #000;
+	color: #fff;
+	border: none;
+	text-transform: uppercase;
+}
+.contact_info {
+	width: 350px;
+	margin-left: 600px;
+	margin-top: 88px;
+}
+.contact_info h2 {
+  font-size: 42px;
+  color: rgb(20, 20, 20);
+  line-height: 1.2;
+}
+.contact_info p {
+	margin-top: 20px;
+  font-size: 16px;
+  color: rgba(20, 20, 20,.7);
+  line-height: 1.6;
+}
+.contact_info address {
+	margin-top: 70px;
+	font-size: 16px;
+  color: rgb(20, 20, 20);
+  line-height: 1.6;
+  font-style: normal;
+}
+.contact_info address p {
+	height: 50px;
+}
+.contact_info address i {
+	float: left;
+	display: inline-block;
+	width: 24px;
+	height: 25px;
+	margin: 5px 30px 12px 0;
+	vertical-align: bottom;
+	background-repeat: no-repeat;
+}
+.contact_info .map {
+	background-image: url(../img/icon_contact_map.png);
+}
+.contact_info .phone {
+	background-image: url(../img/icon_contact_phone.png);
+}
+.contact_info .mail {
+	background-image: url(../img/icon_contact_mail.png);
+}
+/*
+-------------*/
+footer {
+	background-color: rgb(20,20,20);
+}
+.menu {
+  padding: 80px 0 120px 0;
+  font-size: 14px;
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  line-height: 2;
+}
+.menu>li {
+	float: left;
+	width: 25%;
+}
+.submenu {
+	margin-left: -40px;
+	font-size: 16px;
+	line-height: 2.8;
+}
+.submenu i {
+	display: inline-block;
+	width: 24px;
+	height: 17px;
+	margin-right: 15px;
+	background-repeat: no-repeat; 
+	background-image: url(../img/icon_mod_facebook.png);
+}
+.submenu .twitter {
+	background-image: url(../img/icon_mod_twitter.png);
+}
+.submenu .google {
+	background-image: url(../img/icon_mod_google.png);
+}
+.submenu .tumbler {
+	background-image: url(../img/icon_mod_tumbler.png);
+}
+.submenu .pinterest {
+	background-image: url(../img/icon_mod_pinterest.png);
+}
+.submenu .linkedin {
+	background-image: url(../img/icon_mod_linkedin.png);	
+}
